# telegram-grocery-list-bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-08-grocery-bot-button-list.md  2026-04-08-grocery-bot-russian-formatting.md  2026-04-08-grocery-telegram-bot-mvp.md  2026-04-09-grocery-bot-compact-action-buttons.md
docs/superpowers/specs/: 2026-04-08-grocery-bot-button-list-design.md  2026-04-08-grocery-bot-russian-formatting-design.md  2026-04-08-grocery-telegram-bot-design.md  2026-04-09-grocery-bot-compact-action-buttons-design.md
src/grocery_bot/: __init__.py  config.py  duplicate_detection.py  handlers.py  main.py  models.py  rendering.py  service.py  storage.py  telegram_runtime.py
tests/: test_duplicate_detection.py  test_handlers.py  test_rendering.py  test_service.py  test_storage.py  test_telegram_runtime.py
