[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-bot"
version = "0.1.0"
description = "Telegram bot MVP for a shared grocery list."
requires-python = ">=3.12"
dependencies = ["python-telegram-bot>=22.7,<23"]

[project.scripts]
grocery-bot = "grocery_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
